Video и Img максимальные размеры

--- a/src/components/Post/Post.scss
+++ b/src/components/Post/Post.scss
@@ -20,13 +20,16 @@
 	}
 
 	& img {
-		display: block;
-		margin: 0 auto;
+		display:   block;
+		margin:    0 auto;
+		max-width: 100%;
 	}
 
 	& video {
-		display: block;
-		margin: 0 auto;
+		display:   block;
+		margin:    0 auto;
+		max-width: 100%;
+
 	}
 
 	& figcaption {
